[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
requires-python = ">=3.8"
name = "suvawa"
dependencies = []
authors = [
  { name = "Aitzaz Imtiaz", email = "aitzazimtiaz@brokeconsortium.re.kr" }
]
description = "suvawa is a sand-box for interesting mathematical implementations"
readme = { file = "README.txt", content-type = "text/plain" }
license = { text = "Boost Software License - Version 1.0" }
keywords = ["programming", "automata", "research"]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
]

[project.urls]
Homepage = "https://tufbyte.github.io/suvawa"
Documentation = "https://tufbyte.github.io/suvawa/docs"
Repository = "https://github.com/tufbyte/suvawa"
Issues = "https://github.com/tufbyte/suvawa/issues"
Changelog = "https://github.com/tufbyte/suvawa/blob/master/CHANGELOG.txt"

[tool.setuptools]
license-files = ["CONTRIBUTORS.txt"]

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine",
  "mypy",
  "black",
  "isort",
  "flake8",
  "cibuildwheel",
  "pre-commit"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true

[tool.setuptools.dynamic]
version = { attr = "suvawa.__version__" }
